--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,21 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 
 # Server Configuration
 server.port=8080
+
+# Email Configuration (Zoho)
+spring.mail.host=smtp.zoho.com
+spring.mail.port=587
+spring.mail.username=aadhyaeduverse@divyaam.net
+spring.mail.password=MyxxW605RhBn
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.zoho.com
+
+# Email Debug (remove in production)
+logging.level.org.springframework.mail=DEBUG
+spring.mail.properties.mail.debug=true
+
+# Contact Information
+app.contact.email=aadhyaeduverse@divyaam.net
+app.contact.name=Aadhya Eduverse
